--- a/src/styles/FooterFinal.module.css
+++ b/src/styles/FooterFinal.module.css
@@ -27,8 +27,9 @@
 }
 
 .brandLogo {
-  height: auto;
-  width: auto;
+  border-radius: 10px;
+  height: 220px;
+  width: 220px;
   max-width: 220px;
   object-fit: contain;
 }
@@ -130,9 +131,8 @@
 
 .contactInfo {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-template-columns: repeat(3, 1fr);
   gap: 30px;
-  max-width: 800px;
   margin: 0 auto;
 }
 
